--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -65,6 +65,14 @@ body {
     pointer-events: none;
     background: #7f8c8d;
 }
+.wrapper .stats {
+    margin-bottom: 10px;
+    color: #7f8c8d;
+    display: flex;
+}
+.wrapper .stats .stat {
+    margin-right: 10px;
+}
 .wrapper .tasks {
     max-height: 350px;
     overflow-y: auto;
