--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -12,6 +12,66 @@ body {
     padding: 10px;
     background: linear-gradient(to bottom, #1abc9c 0%, #3498db 100%);
 }
+pre, code, kbd, samp {
+    font-family: "SFMono-Regular",Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    font-size: 1em;
+}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    margin-bottom: 1rem;
+    font-weight: 500;
+    line-height: 1.1;
+}
+ol, ul, dl {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+ol {
+    display: block;
+    list-style-type: decimal;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+a {
+    text-decoration: none;
+    color: #333;
+}
+a:hover {
+    color: #3498db;
+}
+label {
+    font-size: .85rem;
+    font-weight: 600;
+    margin-bottom: 0.25rem;
+    display: inline-block;
+    color: #666;
+}
+input[type=text] {
+    width: 100%;
+    height: 45px;
+    outline: none;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+    padding-left: 15px;
+    transition: all 0.3s ease;
+}
+input[type=text]:focus {
+    border-color: #27ae60;
+}
+button {
+    border: none;
+    color: #fff;
+    background: #27ae60;
+    outline: none;
+    cursor: pointer;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+    padding: 10px;
+    font-size: 1rem;
+}
 .wrapper {
     background: #fff;
     max-width: 600px;
@@ -29,33 +89,14 @@ body {
     margin: 20px 0;
     width: 100%;
     display: flex;
-    height: 45px;
-}
-.todo-input input {
-    width: 100%;
-    height: 100%;
-    outline: none;
-    border-radius: 3px;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-    padding-left: 15px;
-    transition: all 0.3s ease;
-}
-.todo-input input:focus {
-    border-color: #27ae60;
 }
 .todo-input button {
     width: 50px;
-    height: 100%;
-    border: none;
-    color: #fff;
+    height: 45px;
+    background: #27ae60;
     margin-left: 5px;
     font-size: 1.5rem;
-    background: #27ae60;
-    outline: none;
-    cursor: pointer;
-    border-radius: 3px;
-    transition: all 0.3s ease;
+    padding: 0;
 }
 .todo-input button:hover {
     opacity: 0.8;
@@ -127,6 +168,21 @@ body {
 .mb-2 { margin-bottom: .5rem; }
 .mb-3 { margin-bottom: 1rem; }
 .mb-4 { margin-bottom: 1.5rem; }
+.mt-0 { margin-top: 0; }
+.mt-1 { margin-top: .25rem; }
+.mt-2 { margin-top: .5rem; }
+.mt-3 { margin-top: 1rem; }
+.mt-4 { margin-top: 1.5rem; }
+.ml-0 { margin-left: 0; }
+.ml-1 { margin-left: .25rem; }
+.ml-2 { margin-left: .5rem; }
+.ml-3 { margin-left: 1rem; }
+.ml-4 { margin-left: 1.5rem; }
+.mr-0 { margin-right: 0; }
+.mr-1 { margin-right: .25rem; }
+.mr-2 { margin-right: .5rem; }
+.mr-3 { margin-right: 1rem; }
+.mr-4 { margin-right: 1.5rem; }
 
 .pl-0 { padding-left: 0; }
 .pl-1 { padding-left: .25rem; }
@@ -149,26 +205,4 @@ p {
     margin: 0;
     font-size: .75rem;
     color: #fff;
-}
-pre, code, kbd, samp {
-    font-family: "SFMono-Regular",Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-    font-size: 1em;
-}
-h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-    margin-bottom: 1rem;
-    font-weight: 500;
-    line-height: 1.1;
-}
-ol, ul, dl {
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
-ol {
-    display: block;
-    list-style-type: decimal;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
 }
